# Consensus-clustering

./: .gitignore  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  requirements.txt  setup_with_ray.sh
benchmarks/: README.md  __init__.py  acmk_performance.py  benchmark.py  benchmark_framework.py  example.sh  quick_sdgca_benchmark.py  quick_test_benchmark.py  ray_performance.py  run_10min_benchmark.py  run_acmk_benchmark.py  run_all_benchmarks.py  run_sdgca_benchmark.py  sdgca_10k_output.txt  sdgca_matlab_datasets.py  sdgca_performance.py  sdgca_ray_performance.py
examples/: data_generator_demo.py  demo.py  ray_parallel_example.py  sdgca_example.py  simple_example.py
original_code/: demo.m  generatebase.m
original_code/alg/: ACMK.m  LBFGSB1.m  LBFGSB2.m  obj_all.m  obj_f1_d2.m  obj_f2.m  optimize_G.m
original_code/util/: ARI.m  discretisation.m  optSigma.m
original_code/util2/: EuclideanPro.m  FSSL_subspace.m  LS21.m  LquadR21_reg.m  best_para.m  eig1.m  eigs1.m  run_our2.m
scripts/: README.md  __init__.py  plot_batch_results.py  remote_utils.py  run_benchmark.py  run_remote.py  run_remote_benchmarks.py  setup_ray_cluster.py  setup_remote_ray.py  upload_code.py
src/: __init__.py
src/acmk/: __init__.py  acmk.py  objectives.py  ray_parallel.py
src/clustering/: base_generation.py  kmeans.py
src/consensus_clustering/: __init__.py
src/consensus_clustering/clustering/: __init__.py  base_generation.py  kmeans.py
src/consensus_clustering/core/: __init__.py  acmk.py  sdgca.py
src/consensus_clustering/metrics/: __init__.py  clustering_measure.py  hungarian.py
src/consensus_clustering/optimization/: optimize_g.py
src/consensus_clustering/ray_parallel/: __init__.py  parallel_base_gen.py  utils.py
src/consensus_clustering/utils/: __init__.py  data_io.py  graph_generator.py  linalg.py
src/core/: __init__.py
src/generators/: __init__.py  data_generator.py
src/metrics/: clustering_measure.py  hungarian.py
src/optimization/: __init__.py  lbfgsb.py  objectives.py
src/sdgca/: __init__.py  ray_parallel.py  sdgca.py
src/utils/: __init__.py  data_io.py  graph_generator.py  linalg.py
tests/: conftest.py
tests/integration/: test_acmk_integration.py  test_sdgca_integration.py
tests/unit/: test_metrics.py  test_ray_example.py  test_ray_parallel.py  test_sdgca.py
